--- a/MyCookieClicker/style.css
+++ b/MyCookieClicker/style.css
@@ -14,6 +14,10 @@
 #coconut {
     transition: transform 0.1s; /*needed for the animation on click*/
     cursor: pointer;
+
+    max-width: 100%;
+    height: auto;
+
 }
 body {
     font-family: Arial, sans-serif;
@@ -74,6 +78,25 @@ h1 {
     background-color: #45a049;
 }
 
+label {
+  display: block;
+  text-align: center;
+  background-color: #4caf50;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  padding: 5px 10px;
+  cursor: pointer;
+  width: 140px;
+}
+
+.droparea {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+}
 
 /* Nav bar : https://github.com/kevin-powell/funky-nav/blob/main/style.css
 
